unit_tests/coverage.suite/lslparse-err-23.err
#define y
        ^
(Line 6 char 9): ERROR: Syntax error
