unit_tests/coverage.suite/lslparse-err-23.lsl
#define x
#line 3 "unit_tests/coverage.suite/lslparse-err-23\x2elsl"
#pragma OPT +enableswitch,breakcont,-breakcont,breakcont
#pragma OPT -enableswitch,-breakcont,extendedglobalexpr,extendedtypecast,extendedassignment,explicitcast,allowkeyconcat,allowmultistrings,errmissingdefault,lazylists,duplabels,shrinknames,funcoverride,-processpre
integer a = 2 + 3;
#define y
